--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: home
     <div class="section text-center">
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto">
-          <h2 class="title">About Hack NTX</h2>
+          <h2 class="title">About Open Data Day</h2>
           <h5 class="description">To promote civic engagement and smart city innovation in North Texas, this event is all about collaboration between cities and citizens to turn problems into opportunities, and ideas into products that can have a measureable, positive impact on their own community.
            <br>
          Hack NTX is a 100% community organized hackathon by TechMill, a registered 501(c)(3) nonprofit focused on building community through networking, events, and education!</h5>
