--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: home
       <div class="col-md-6">
         <h1 class="title">{{ site.title }}</h1>
         <h4>{{ site.description }}</h4>
-        <h3><strong>{{ site.data.event.date }}</strong> @ UNT Inspire Park (Frisco)</h3>
+        <h3><strong>{{ site.data.event.date }}</strong> @ {{ site.data.event.venue.name }}</h3>
         <br>
         <a href="{{ site.data.event.url }}" target="_blank" class="btn btn-success btn-raised btn-lg">
           Register
