--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: home
           <h2 class="title">About Open Data Day</h2>
           <h5 class="description">To promote civic engagement and smart city innovation in North Texas, this event is all about collaboration between cities and citizens to turn problems into opportunities, and ideas into products that can have a measureable, positive impact on their own community.
            <br>
-         Hack NTX is a 100% community organized hackathon by TechMill, a registered 501(c)(3) nonprofit focused on building community through networking, events, and education!</h5>
+         Open Data Day is a 100% community organized hackathon by TechMill, a registered 501(c)(3) nonprofit focused on building community through networking, events, and education!</h5>
        </div>
      </div>
    </div>
@@ -45,7 +45,7 @@ layout: home
       </div>
       <div class="col-md-4">
         <p>Cities are constantly improving their technology infrastructure to keep pace with the modern world. Data has become the single most important decision making tool that helps our local governments make better choices on urban planning and infrastructure development based on evidence to benefit our communities.</p>
-        <p>Hack NTX is a hackathon aimed at supporting cities and communities across North Texas who are investing and researching in new ways to improve the lives of everyday citizens through technology. This event is a chance for those passionate about civic technology, government transparency, and open data to utilize their skillsets in building applications, tools, and prototypes that support smart city initiatives.</p>
+        <p>Open Data Day is a hackathon aimed at supporting cities and communities across North Texas who are investing and researching in new ways to improve the lives of everyday citizens through technology. This event is a chance for those passionate about civic technology, government transparency, and open data to utilize their skillsets in building applications, tools, and prototypes that support smart city initiatives.</p>
       </div>
     </div>
   </div>
@@ -56,9 +56,9 @@ layout: home
      <div class="col-md-8 offset-md-2">
        <h2 class="text-center title">How can my city participate?</h2>
        <br>
-       The purpose of Hack NTX is to integrate passionate technologists with innovative cities to validate or prototype new smart city projects, or brainstorm and address problems city officials see in their own community that could be positively addressed through technology. <strong>Are you a city with a project? Visit our <a href="/sponsors" title="Hack NTX Sponsors">sponsor page</a> for more information, or <a href="mailto:sponsor@techmill.co">contact us</a> directly.</strong>
+       The purpose of Open Data Day is to integrate passionate technologists with innovative cities to validate or prototype new smart city projects, or brainstorm and address problems city officials see in their own community that could be positively addressed through technology. <strong>Are you a city with a project? Visit our <a href="/sponsors" title="Hack NTX Sponsors">sponsor page</a> for more information, or <a href="mailto:sponsor@techmill.co">contact us</a> directly.</strong>
        <br><br>
-       Here are some categories of projects that could be pitched at Hack NTX.
+       Here are some categories of projects that could be pitched at Open Data Day.
      </div>
    </div>
    <div class="row">
@@ -88,7 +88,7 @@ layout: home
           </div>
           <div class="col-md-3">
             {%- include components/card.html
-              title="Safety"
+              title="Public Safety"
               iconStatus="icon-info"
               iconType="feedback"
               content="How can we provide an easier, more accurate way for citizens to submit safety issues for the cities to review?"
@@ -137,16 +137,16 @@ layout: home
              <div class="card-body "><br>
                <div class="tab-content text-center">
                  <div class="tab-pane active" id="developers">
-                   <p>For those who think Python isn't a pet and JSON isn't the name of a deli, then you're already halfway there! Hackathons are technical in nature and needs developers who can take solution concepts and turn them into practical applications. Whether you're piecing together APIs or building on top of a new framework - developers are crucial to delivering projects.</p>
+                   <p>For those who think Python isn't a pet and JSON isn't the name of a deli, then you're already halfway there! Hackathons are technical in nature and needs developers who can take solution concepts and turn them into practical applications. Whether you're piecing together APIs or building on top of a new framework or mobile app- developers are crucial to delivering projects.</p>
                  </div>
                  <div class="tab-pane" id="designers">
                    <p>A user interface is like a joke - if you have to explain it, it's not very good. Designers can provide invaluable insight into the user interface and user experience when developing a new product. Developers and designers go hand-in-hand to delivering functional and usable software.</p>
                  </div>
                  <div class="tab-pane" id="nontechnical">
-                   <p>A project without a purpose is just code and colors. Non-technical participants can encompass a number of roles, but generally are business development or subject matter experts who can provide insight, logic, and reason as to what the projects are actually trying to solve.</p>
+                   <p>A project without a purpose is just code and colors. Non-technical participants can encompass a number of roles, but generally doumentation, video editing, infographics, or subject matter experts who can provide insight, logic, and reason as to what the projects are actually trying to solve.</p>
                  </div>
                  <div class="tab-pane" id="students">
-                   <p>The first part to getting involved is showing up! This hackathon is not limited to "professionals" by any means. Whether you're an expert in NodeJS or blockchain - or just trying to apply those C++ courses into a practical project - this event will provide you with invaluable experience.<br><br>*You must be 18+ to participate.</p>
+                   <p>The first part to getting involved is showing up! This hackathon is not limited to "professionals" by any means. Whether you're an expert in NodeJS or blockchain - or just trying to apply those C++ courses into a practical project - this event will provide you with invaluable experience.</p>
                  </div>
                </div>
                <br>
