--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: "Home"
 layout: home
 ---
 
-<div class="page-header header-filter" data-parallax="true" style="background-image: url('/assets/img/city-profile.jpg')">
+<div class="page-header header-filter" data-parallax="true" style="background-image: url('/assets/img/banner.png')">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
@@ -16,7 +16,7 @@ layout: home
         </a>
       </div>
       <div class="col-md-4 offset-md-1">
-        <img src="/assets/img/hackntx.png" alt="Hack NTX" class="img-fluid">
+        <img src="/assets/img/odd.png" alt="Open Data Day" class="img-fluid">
       </div>
     </div>
   </div>
@@ -30,7 +30,7 @@ layout: home
           <h2 class="title">About Open Data Day</h2>
           <h5 class="description">To promote civic engagement and smart city innovation in North Texas, this event is all about collaboration between cities and citizens to turn problems into opportunities, and ideas into products that can have a measureable, positive impact on their own community.
            <br>
-         Open Data Day is a 100% community organized hackathon by TechMill, a registered 501(c)(3) nonprofit focused on building community through networking, events, and education!</h5>
+         Open Data Day is a 100% community organized event by TechMill, a registered 501(c)(3) nonprofit focused on building community through networking, events, and education!</h5>
        </div>
      </div>
    </div>
@@ -45,7 +45,7 @@ layout: home
       </div>
       <div class="col-md-4">
         <p>Cities are constantly improving their technology infrastructure to keep pace with the modern world. Data has become the single most important decision making tool that helps our local governments make better choices on urban planning and infrastructure development based on evidence to benefit our communities.</p>
-        <p>Open Data Day is a hackathon aimed at supporting cities and communities across North Texas who are investing and researching in new ways to improve the lives of everyday citizens through technology. This event is a chance for those passionate about civic technology, government transparency, and open data to utilize their skillsets in building applications, tools, and prototypes that support smart city initiatives.</p>
+        <p>Open Data Day is a day long event aimed at supporting cities and communities across North Texas who are investing and researching in new ways to improve the lives of everyday citizens through technology. This event is a chance for those passionate about civic technology, government transparency, and open data to utilize their skillsets in building applications, tools, and prototypes that support smart city initiatives.</p>
       </div>
     </div>
   </div>
@@ -56,7 +56,7 @@ layout: home
      <div class="col-md-8 offset-md-2">
        <h2 class="text-center title">How can my city participate?</h2>
        <br>
-       The purpose of Open Data Day is to integrate passionate technologists with innovative cities to validate or prototype new smart city projects, or brainstorm and address problems city officials see in their own community that could be positively addressed through technology. <strong>Are you a city with a project? Visit our <a href="/sponsors" title="Hack NTX Sponsors">sponsor page</a> for more information, or <a href="mailto:sponsor@techmill.co">contact us</a> directly.</strong>
+       The purpose of Open Data Day is to integrate passionate technologists with innovative cities to validate or prototype new smart city projects, or brainstorm and address problems city officials see in their own community that could be positively addressed through technology. <strong>Are you a city with a project? Visit our <a href="/sponsors" title="DFW Open Data Day Sponsors">sponsor page</a> for more information, or <a href="mailto:sponsor@techmill.co">contact us</a> directly.</strong>
        <br><br>
        Here are some categories of projects that could be pitched at Open Data Day.
      </div>
@@ -137,7 +137,7 @@ layout: home
              <div class="card-body "><br>
                <div class="tab-content text-center">
                  <div class="tab-pane active" id="developers">
-                   <p>For those who think Python isn't a pet and JSON isn't the name of a deli, then you're already halfway there! Hackathons are technical in nature and needs developers who can take solution concepts and turn them into practical applications. Whether you're piecing together APIs or building on top of a new framework or mobile app- developers are crucial to delivering projects.</p>
+                   <p>For those who think Python isn't a pet and JSON isn't the name of a deli, then you're already halfway there! Open data events are technical in nature and needs developers who can take solution concepts and turn them into practical applications. Whether you're piecing together APIs or building on top of a new framework or mobile app- developers are crucial to delivering projects.</p>
                  </div>
                  <div class="tab-pane" id="designers">
                    <p>A user interface is like a joke - if you have to explain it, it's not very good. Designers can provide invaluable insight into the user interface and user experience when developing a new product. Developers and designers go hand-in-hand to delivering functional and usable software.</p>
@@ -146,7 +146,7 @@ layout: home
                    <p>A project without a purpose is just code and colors. Non-technical participants can encompass a number of roles, but generally doumentation, video editing, infographics, or subject matter experts who can provide insight, logic, and reason as to what the projects are actually trying to solve.</p>
                  </div>
                  <div class="tab-pane" id="students">
-                   <p>The first part to getting involved is showing up! This hackathon is not limited to "professionals" by any means. Whether you're an expert in NodeJS or blockchain - or just trying to apply those C++ courses into a practical project - this event will provide you with invaluable experience.</p>
+                   <p>The first part to getting involved is showing up! This event is not limited to "professionals" by any means. Whether you're an expert in NodeJS or blockchain - or just trying to apply those C++ courses into a practical project - this event will provide you with invaluable experience.</p>
                  </div>
                </div>
                <br>
@@ -220,14 +220,14 @@ layout: home
             <div class="row">
               <div class="col-md-6">
                 <div class="gmap-embed">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3339.674457331174!2d-96.8340780851558!3d33.17017237114258!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864c3fdc5ff26e79%3A0x1633d41cba10523a!2sUNT+Inspire+Park!5e0!3m2!1sen!2sus!4v1540267436521" frameborder="0" style="border:0" allowfullscreen></iframe>
+                  <iframe src="https://maps.google.com/maps?q=Search%20Results%20J.%20Erik%20Jonsson%20Central%20Library&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
               </div>
               <div class="col-md-4 offset-md-1">
                 <div class="card card-contact card-raised text-center">
                   <div class="card-body">
                     <address class="lead">
-                      <strong>UNT Inspire Park</strong><br>
+                      <strong>{{ site.data.event.venue.name }}</strong><br>
                       6170 Research Rd<br>
                       Frisco, TX 75033
                     </address>
@@ -255,7 +255,7 @@ layout: home
              <a href="mailto:sponsor@techmill.co" class="btn btn-success btn-lg btn-raised">Contact Us</a>
              <br><br>
              <p>
-               Download our <a style="text-decoration: underline;" href="{{ '/assets/docs/2018-hackntx-sponsor.pdf' | prepend: baseurl }}" title="Sponsorship packet">sponsorship packet</a></p>
+               Download our <a style="text-decoration: underline;" href="{{ '/assets/docs/odd-sponsor.pdf' | prepend: baseurl }}" title="Sponsorship packet">sponsorship packet</a></p>
              </div>
            </div>
          </div>
