--- a/index.html
+++ b/index.html
@@ -164,23 +164,23 @@ layout: home
        <div class="row">
         <div class="col-md-4">
           {%- include components/card.html
-            title="Cash Prizes"
+            title="A Rewarding Experience"
             iconStatus="icon-success"
             iconType="attach_money"
-            content="While this is currently dependent upon the number of sponsors we get, the top team will be walking away with cold hard cash."
+            content="Open Data Day is an extremely rewarding experience! Do good with your skills and experiance to improve your city."
             -%}
           </div>
           <div class="col-md-4">
             {%- include components/card.html
-              title="Swag"
+              title="The Thrill"
               iconStatus="icon-info"
               iconType="card_giftcard"
-              content="Because you can't attend a tech event without leaving with at least a stack of laptop stickers - right?"
+              content="When you gather a group of people together and put a time constraint on a project it opens the door for innovative ideas."
               -%}
             </div>
             <div class="col-md-4">
               {%- include components/card.html
-                title="Experience"
+                title="Networking"
                 iconStatus="icon-danger"
                 iconType="thumb_up"
                 content="Take the opportunity to mingle with peers, network with like minded individuals, and try something you never have before."
