--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: home
         </a>
       </div>
       <div class="col-md-4 offset-md-1">
-        <img src="/assets/img/odd.png" alt="Open Data Day" class="img-fluid">
+        <img src="/assets/img/odd-texas.png" alt="Open Data Day" class="img-fluid">
       </div>
     </div>
   </div>
