--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ layout: home
               title="The Thrill"
               iconStatus="icon-info"
               iconType="card_giftcard"
-              content="When you gather a group of people together and put a time constraint on a project it opens the door for innovative ideas."
+              content="When you gather people together and put a time constraint on a project it opens the door for innovative ideas."
               -%}
             </div>
             <div class="col-md-4">
