Add sponsir-email classes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: home
      <div class="col-md-8 offset-md-2">
        <h2 class="text-center title">How can my city participate?</h2>
        <br>
-       The purpose of Open Data Day is to integrate passionate technologists with innovative cities to validate or prototype new smart city projects, or brainstorm and address problems city officials see in their own community that could be positively addressed through technology. <strong>Are you a city with a project? Visit our <a href="/sponsors" title="DFW Open Data Day Sponsors">sponsor page</a> for more information, or <a href="mailto:sponsor@techmill.co">contact us</a> directly.</strong>
+       The purpose of Open Data Day is to integrate passionate technologists with innovative cities to validate or prototype new smart city projects, or brainstorm and address problems city officials see in their own community that could be positively addressed through technology. <strong>Are you a city with a project? Visit our <a href="/sponsors" title="DFW Open Data Day Sponsors">sponsor page</a> for more information, or <a class="sponsor-email" href="mailto:sponsor@techmill.co">contact us</a> directly.</strong>
        <br><br>
        Here are some categories of projects that could be pitched at Open Data Day.
      </div>
@@ -252,7 +252,7 @@ layout: home
              <h2 class="title">SPONSOR A PROJECT</h2>
            </div>
            <div class="col-md-4 ml-auto mr-auto text-center">
-             <a href="mailto:sponsor@techmill.co" class="btn btn-success btn-lg btn-raised">Contact Us</a>
+             <a href="mailto:sponsor@techmill.co" class="btn btn-success btn-lg btn-raised sponsor-email">Contact Us</a>
              <br><br>
              <p>
                Download our <a style="text-decoration: underline;" href="{{ '/assets/docs/odd-sponsor.pdf' | prepend: baseurl }}" title="Sponsorship packet">sponsorship packet</a></p>
