Add register links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: home
         <h4>{{ site.description }}</h4>
         <h3><strong>{{ site.data.event.date }}</strong> @ {{ site.data.event.venue.name }}</h3>
         <br>
-        <a href="{{ site.data.event.url }}" target="_blank" class="btn btn-success btn-raised btn-lg">
+        <a href="{{ site.data.event.url }}" target="_blank" class="btn btn-success btn-raised btn-lg register-link">
           Register
         </a>
       </div>
