Added challenges and Dallas PDF of challenges.

--- a/challenges.html
+++ b/challenges.html
@@ -2,28 +2,46 @@
 layout: page
 title: "Challenges"
 permalink: /challenges
-description: Do you have your own civic tech idea?
+description: Topic areas for Open Data Day 2019
 ---
 
-<h2 class="title text-center">Your ideas power the event!</h2>
+<h2 class="title text-center">This Year's Challenges (you can also bring your own)!</h2>
 
 <div class="row">
 	<div class="container">
-		<p>We're all citizens in the cities we live in. When we go out to drive, shop, eat, drink, or even in our own homes and neighborhoods - we sometimes encounter issues of our own that could be fixed or improved. These can vary wildly in implementation and effort. For example:</p>
-		<p>
+		<p>We're all citizens in the cities we live in. When we go out to drive, shop, eat, drink, or even in our own homes and neighborhoods - we sometimes encounter issues of our own that could be fixed or improved. Just like you, the cities who are participating in Open Data Day have identified issues they want to work on, and Open Data Day is a great chance to get some insights and proofs-of-concept work done. These challenges are not a restrictive list -- you can work on other questions and even recruit other people to work with you -- but these are topics of interest that probably affect many citizens.</p>
+        <p>
+        <h3 class="title text-center">Challenges</h3>
+        <p>
+        <ul>
+            <li>Re-create a Market Value Analysis (MVA) tool for Denton, based on the Dallas Example</li>
+            <li>NCTCOG is interested in exploring more prediction modeling using 90 days of the Waze incident reporting data, as they shared 30 days of the data at HackNTX and got very interesting results out of it.</li>
+            <li>Create an environmental data dashboard/visualization combining Denton and Dallas Environmental Sensor projects</li>
+            <ul>
+                <li> <a href="https://taqm.epa.gov.tw/taqm/en/AqiMapTGOS.aspx">Sensor data dashboard from Taiwan</a></li>
+                <li> <a href="https://air.nullschool.net/#/pm25/current">Nullschool.net dashboard of PM25 data and wind data for Tokyo </a></li>
+            </ul>
+            <li>Create an <a href="assets/img/Hack-a-thon Challenge_Citizen Experience_0.3.pdf">experience for Dallas residents</a> to easily find out about proposed zoning changes near them. This challenge seeks a <i>robust</i> citizen experience to discover and/or be informed about proposed zoning changes that will potentially impact them; in addition to the citizen experience submissions should include information on how the proposal is feasible and maintainable.</li>
+            <li>Create an <a href="assets/img/Hack-a-thon Challenge_Citizen Experience_0.3.pdf">experience for Dallas residents</a> to enable easy localization and identification of how the city right of way is being used and how to both search for and apply for right-of-way permits. What type of Right of Way use information is of interest to Dallas residents?</li>
+            <li> Devise an  <a href="assets/img/Hack-a-thon Challenge_Citizen Experience_0.3.pdf">efficient and user-friendly experience for Dallas residents</a>  to identify capital projects (Public works, roads, water systems) in their neighborhoods. Citizens should easily be able to access information regarding projects from disparate datasets that would be helpful in submitting questions to the City of Dallas regarding the impacts to their community and opportunities for optimization. Citizens should easily be able to access information regarding projects from disparate datasets that would be helpful in submitting questions to the City of Dallas regarding the impacts to their community and opportunities for optimization.
+                <a href="assets/img/Hack-a-thon Challenge_Citizen Experience_0.3.pdf">experience for Dallas residents</a> 
+                to enable easy localization and identification of how the city right of way is being used and how to both search for and apply for right-of-way permits.</li>
+            <li> Create an easy to use mechanism for Do-It-Yourself-savvy citizens to <a href="assets/img/Hack-a-thon Challenge_Citizen Experience_0.3.pdf">determine what types of permits are offered by the city and discover what types of permits may apply for their next home improvement project</a>. Currently the City of Dallas provides a website for citizens and contractors to access information regarding building permits and inspections.
+In addition, the City offers an online permitting system for registered contractors. Neither of these resources are designed with homeowners doing DIY home repairs and updates as the primary target audience. As a result, it can be challenging for citizens not working with a contractor to determine whether they need a permit and what is required to obtain one.
+This challenge is to create an easy to use mechanism for Do It Yourself savvy citizens to determine what types of permits are offered by the city and discover what types of permits may apply for their next home improvement project.</li>
+
+        </ul>
+        <p> In years past, people have also worked on topics like these:
+        <p>
 			<ul>
-				<li>We see a big pothole in a road - but how can we report it?</li>
 				<li>People seem to be complaining about air quality but our city isn't addressing it, but maybe we can capture some of our own samples to collect more data.</li>
-				<li>It's difficult to find my trash pickup times for our neighborhood - can we make that easier to find?</li>
-				<li>Our downtown area doesn't have public wifi - what are the obstacles to address that?</li>
-				<li>How can we find out about the construction projects that are going on around our city?</li>
-				<li>Can we use open data to correlate accidents to intersections to fix the most dangerous ones?</li>
+				<li>How can we enable the most efficient location for resources designed to help people experiencing homelessness?</li>
 			</ul>
 		</p>
 		</p>
 		<p>The number of ideas that could be worked on are limitless, but you should try and find something you're passionate about, or even find interesting as a technology solution. Could we build a chatbot based on data scraped from a city website? If you find chatbots and data scraping interesting - then this is the project for you!</p>
 
-		<p>But we do want to encourage you to contribute the issues you see in your own city, and the ideas you have that could help alleviate them. We'll aggregate the results before the event that gives us a list of challenges, sorted by popularity, that could be addressed during the event. Fill out the form below to contribute!</p>
+		<p>We encourage you to contribute the issues on this list, but we are happy to aggregate topics from participants that could be addressed during the event. Fill out the form below to contribute!</p>
 	</div>
 </div>
 <hr>
