--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ layout: home
             <div class="row">
               <div class="col-md-6">
                 <div class="gmap-embed">
-                  <iframe src="https://maps.google.com/maps?q=Search%20Results%20J.%20Erik%20Jonsson%20Central%20Library&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
+                  <iframe src="https://maps.google.com/maps?q=Search%20Results%20{{ site.data.event.venue.name | url_encode }}%20{{ site.data.event.venue.address.full | url_encode }}&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
               </div>
               <div class="col-md-4 offset-md-1">
